--- a/src/css/main.css
+++ b/src/css/main.css
@@ -232,6 +232,18 @@ input[type=search]:focus {
     line-height: 1.5;
 }
 
+.dashboard-tabControl ul > li:nth-child(4):after {
+    content: '\f0d7';
+    font-family: 'FontAwesome';
+    width: 20px;
+    height: 20px;
+    position: relative;
+    left: 55px;
+    font-size: 40px;
+    top: 10px;
+    line-height: 0px;
+}
+
 @media (max-width: 767px) {
 }
 
