update js to not accept empty string and update main.scss to have variables

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,6 @@
+$panel-body-height: 75vh;
+
+
 html, body {
     height: 100%;
     width: 100%;
@@ -169,6 +172,10 @@ input[type=search]:focus {
     background-color: #525151;
     font-size: 20px;
     color: white;
+}
+
+.panel-body {
+    height: $panel-body-height;
 }
 
 .dashboard-icon {
