--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -213,13 +213,14 @@ input[type=search]:focus {
     float: left;
 }
 
-.dashboard-notifications {
+.dashboard-notifications_alert {
     margin-top: 10px;
     width: 100%;
     float: left;
     margin-top: 10px;
     margin-bottom: 10px;
     background: black;
+    box-shadow: 0px 0px 2px 1px rgba(179, 17, 17, 0.78);
     padding: 5px 5px 5px 5px;
     color:white;
 }
@@ -315,6 +316,11 @@ li.new-item {
     to {
         opacity: 1;
     }
+}
+
+@keyframes embold {
+    0%   { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 .dashboard-input input {
