--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,7 +8,8 @@ $header-searchBar-hover: #d9d9d9;
 $header-serachBar-bg: "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30'><circle cx='15' cy='15' r='10' /></svg>";
 
 
-$main-panel-color: grey;
+$main-panel: rgba(78, 77, 77, 0.64);
+$main-panel-classification: rgba(25, 133, 245, 0.85);
 
 $dashboard-alert-fontSize: 18px;
 
@@ -160,9 +161,15 @@ input[type=search]:focus {
 }
 
 .main-dashboard_panel {
-    background: $main-panel-color;
+    background: $main-panel;
     height: 35px;
-    box-shadow: 0px 2px 2px black;
+    box-shadow: 0 2px 2px black;
+}
+
+.main-dashboard_panel-blue {
+    background: $main-panel-classification;
+    height: 35px;
+    box-shadow: 0 2px 2px black;
 }
 
 .main-dashboard_title {
@@ -273,9 +280,18 @@ input[type=search]:focus {
     padding: 5px;
 }
 
-.dashboard-rightSide {
+.dashboard-rightSide_wrapper {
+    float: right;
+    width: 25%;
+}
+
+.dashboard-rightSide_container {
     height: 150px;
     float: right;
+}
+
+.dashboard-rightSide_classification {
+
 }
 
 .dashboard-tabControl ul {
